# solana-axelar

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING  Cargo.toml  README.md  _typos.toml  generate_bindings.sh  package.json
.github/actions/setup-repo/: action.yaml
.github/workflows/: relayer-deployment.yml
bindings/: README.md  generate_bindings.sh  prepare_test.sh
bindings/anchor_lib/: axelar-solana-gateway.rs  axelar-solana-its.rs
bindings/tests/: its.ts  memo-program.ts
crates/axelar-executable/src/: lib.rs
crates/axelar-solana-gateway-test-fixtures/src/: gas_service.rs  gateway.rs
helpers/program-utils/src/: lib.rs  pda.rs
helpers/program-utils/tests/integration/: pda.rs
helpers/role-management/src/: processor.rs
programs/axelar-solana-gas-service/: Cargo.toml  README.md
programs/axelar-solana-gas-service/src/: instructions.rs  lib.rs  state.rs
programs/axelar-solana-gas-service/src/processor/: initialize.rs  native.rs  spl.rs
programs/axelar-solana-gas-service/tests/module/: initialize.rs
programs/axelar-solana-gateway/: Cargo.toml
programs/axelar-solana-gateway/src/: instructions.rs  lib.rs
programs/axelar-solana-gateway/src/processor/: approve_message.rs  close_message_payload.rs  commit_message_payload.rs  initialize_config.rs  initialize_message_payload.rs  rotate_signers.rs  validate_message.rs  write_message_payload.rs
programs/axelar-solana-gateway/src/state/: message_payload.rs
programs/axelar-solana-gateway/tests/integration/: commit_message_payload.rs  initialize_message_payload.rs  validate_message.rs
programs/axelar-solana-governance/: Cargo.toml
programs/axelar-solana-governance/src/: instructions.rs  lib.rs
programs/axelar-solana-governance/src/processor/: execute_operator_proposal.rs  execute_proposal.rs  transfer_operatorship.rs  withdraw_tokens.rs
programs/axelar-solana-governance/src/state/: proposal.rs
programs/axelar-solana-governance/tests/module/: execute_proposal.rs  (+3 more)
programs/axelar-solana-its/: Cargo.toml
programs/axelar-solana-its/src/: entrypoint.rs  instruction.rs  lib.rs
programs/axelar-solana-memo-program/: Cargo.toml
programs/axelar-solana-memo-program/src/: lib.rs
programs/axelar-solana-multicall/: Cargo.toml
programs/axelar-solana-multicall/src/: lib.rs
programs/dummy-axelar-solana-gateway/: Cargo.toml
programs/dummy-axelar-solana-gateway/src/: instructions.rs  processor.rs
scripts/: generate-clients.mjs  test-js.mjs
solana/: Cargo.toml
solana/bindings/: README.md  package.json  prepare_test.sh
solana/bindings/anchor_lib/: axelar-solana-its.rs
solana/bindings/axelar-solana-its/: package-lock.json  package.json  tsconfig.json
solana/bindings/axelar-solana-its/src/: instructions.ts  pda.ts
solana/bindings/tests/: its.ts
solana/crates/axelar-executable/src/axelar_payload/encoding/: abi_encoding.rs
solana/crates/axelar-solana-gas-service-events/src/: events.rs
solana/crates/axelar-solana-gateway-test-fixtures/: Cargo.toml
solana/crates/axelar-solana-gateway-test-fixtures/src/: base.rs  gas_service.rs  gateway.rs  lib.rs  relayer_discovery.rs
solana/crates/event-macros/: Cargo.toml
solana/crates/event-macros/src/: lib.rs
solana/crates/event-utils/: Cargo.toml
solana/crates/event-utils/src/: lib.rs
solana/crates/gateway-event-stack/src/: lib.rs
solana/helpers/axelar-message-primitives/src/payload/encoding/: abi_encoding.rs
solana/helpers/interchain-token-transfer-gmp/src/: lib.rs
solana/helpers/its-instruction-builder/src/: lib.rs
solana/helpers/test-fixtures/: Cargo.toml
solana/programs/axelar-solana-gateway/: README.md
solana/programs/axelar-solana-gateway/src/: error.rs  instructions.rs  lib.rs  processor.rs
solana/programs/axelar-solana-gateway/src/processor/: approve_message.rs  close_message_payload.rs  commit_message_payload.rs  initialize_config.rs  initialize_message_payload.rs  initialize_payload_verification_session.rs  rotate_signers.rs  validate_message.rs  verify_signature.rs  write_message_payload.rs
solana/programs/axelar-solana-gateway/src/state/: incoming_message.rs  signature_verification_pda.rs  verifier_set_tracker.rs
solana/programs/axelar-solana-gateway/tests/integration/: initialize_message_payload.rs
solana/programs/axelar-solana-governance/src/processor/gmp/: mod.rs
solana/programs/axelar-solana-governance/tests/module/: helpers.rs
solana/programs/axelar-solana-its/: Cargo.toml
solana/programs/axelar-solana-its/src/: executable.rs  instruction.rs  lib.rs
solana/programs/axelar-solana-its/src/instruction/: token_manager.rs
solana/programs/axelar-solana-its/src/processor/: gmp.rs  interchain_token.rs  interchain_transfer.rs  link_token.rs  mod.rs  token_manager.rs
solana/programs/axelar-solana-its/src/state/: token_manager.rs
solana/programs/axelar-solana-its/tests/module/: from_evm_to_solana.rs  from_solana_to_evm.rs  main.rs  pause_unpause.rs  role_management.rs
solana/programs/axelar-solana-memo-program/: Cargo.toml
solana/programs/axelar-solana-memo-program/src/: instruction.rs  lib.rs  processor.rs
solana/programs/axelar-solana-memo-program/tests/evm-e2e/: from_solana_to_evm.rs
solana/programs/axelar-solana-memo-program/tests/module/: validate_message.rs
solana/programs/axelar-solana-multicall/src/: instructions.rs
solana/programs/axelar-solana-relayer-discovery/: Cargo.toml
solana/programs/axelar-solana-relayer-discovery/src/: instructions.rs  lib.rs  processor.rs  state.rs
solana/programs/axelar-solana-relayer-discovery/src/processor/: get_instruction.rs  set_instruction.rs
solana/programs/axelar-solana-relayer-discovery/tests/module/: main.rs  set_get_intstruction.rs
solana/scripts/: generate-clients.mjs  generate-idls.mjs
solana/xtask/: Cargo.toml  ampd-config.toml  solana-devnet.json
solana/xtask/src/: cli.rs  main.rs
solana/xtask/src/cli/cmd/: cosmwasm.rs  deployments.rs  evm.rs  solana.rs  testnet.rs
solana/xtask/src/cli/cmd/testnet/: cosmwasm_interactions.rs  evm_interaction.rs  multisig_prover_api.rs  solana_interactions.rs
xtask/src/: main.rs
(+17 files in other folders)
