[workspace]
members = ["programs/*", "helpers/*", "xtask", "crates/*"]
resolver = "2"

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
restriction = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

absolute_paths = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
dbg_macro = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
future_not_send = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
multiple_crate_versions = "allow"
negative_feature_names = "allow"
pub_use = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
wildcard_imports = "allow"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_imports = "warn"
unused_must_use = "deny"

[workspace.dependencies]
anyhow = "1"
base64 = "0.21"
bcs = "0.1.6"
bincode = "1"
bnum = { version = "0.10", features = ["serde"] }
borsh = { version = "1", features = ["derive"] }
bs58 = "0.5.1"
bytemuck = "1"
futures = "0.3"
hex = "0.4"
itertools = "0.12"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
rkyv = "0.7"
rstest = "0.19"
serde = "1"
serde_json = "1"
sha3 = "0.10"
signature = "2"
simd-json = "0.13"

# solana
solana-client = "2"
solana-logger = "2"
solana-program = "2"
solana-program-test = "2"
solana-sdk = "2"
solana-test-validator = "2"
solana-streamer = "2"
spl-associated-token-account = "2"
spl-token = "4"
solana-cli-config = "2"
solana-rpc = "2"
solana-rpc-client-api = "2"
solana-transaction-status = "2"

# evm
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
ethers = "2"
ethers-core = "2"

# amplifier
axelar-gateway = { path = "../axelar-amplifier/contracts/gateway", features = ["library"], package = "gateway" }
gateway-api = { path = "../axelar-amplifier/packages/gateway-api" }
multisig = { path = "../axelar-amplifier/contracts/multisig", features = ["library"] }
router-api = { path = "../axelar-amplifier/packages/router-api" }

# cosmwasm
cosmwasm-schema = "2"
cosmwasm-std = "1.5"

# crypto
k256 = { version = "0.13", features = ["ecdsa"] }
libsecp256k1 = { version = "0.6", default-features = false }
ed25519-dalek = "2"

# utils
tempfile = "3"
proc-macro2 = "2"
test-log = { version = "0.2", features = ["trace"], default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
typed-builder = "0.19"
xshell = "0.2"
bip39 = { version = "2", features = ["rand"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
const_format = { version = "0.2", features = ["fmt"] }
cosmrs = { version = "0.16", features = ["cosmwasm", "rpc", "grpc"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
derive_builder = "0.20"
eyre = "0.6"
flate2 = "1.0"
inquire = "0.7.5"
rust_decimal = "1"
rust_decimal_macros = "1"
tar = "0.4"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

# solana programs
axelar-solana-memo-program = { path = "programs/axelar-solana-memo-program" }
axelar-solana-multicall = { path = "programs/axelar-solana-multicall" }
gas-service = { path = "programs/gas-service" }
gateway = { path = "programs/gateway", package = "gmp-gateway" }

# helper crates
axelar-executable = { path = "helpers/axelar-executable" }
axelar-message-primitives = { path = "helpers/axelar-message-primitives" }
axelar-rkyv-encoding = { path = "crates/axelar-rkyv-encoding", features = ["solana"] }
evm-contracts-rs = { path = "helpers/evm-contracts-rs" }
evm-contracts-test-suite = { path = "helpers/evm-contracts-test-suite" }
interchain-token-transfer-gmp = { path = "helpers/interchain-token-transfer-gmp" }
program-utils = { path = "helpers/program-utils" }
test-fixtures = { path = "helpers/test-fixtures" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
