[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_imports = "warn"
unused_must_use = "deny"

[dependencies]
axelar-executable.workspace = true
axelar-message-primitives.workspace = true
axelar-rkyv-encoding.workspace = true
axelar-solana-memo-program.workspace = true
base64.workspace = true
bincode.workspace = true
bip39.workspace = true
borsh.workspace = true
clap.workspace = true
color-eyre.workspace = true
const_format.workspace = true
cosmrs.workspace = true
cosmwasm-schema.workspace = true
csv-async.workspace = true
derive_builder.workspace = true
ethers.workspace = true
evm-contracts-test-suite.workspace = true
eyre.workspace = true
flate2.workspace = true
futures.workspace = true
axelar-gateway.workspace = true
gateway-api.workspace = true
gateway.workspace = true
hex.workspace = true
inquire.workspace = true
itertools.workspace = true
k256.workspace = true
multisig.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
router-api.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json.workspace = true
solana-cli-config.workspace = true
solana-client.workspace = true
solana-rpc.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-test-validator.workspace = true
solana-transaction-status.workspace = true
tar.workspace = true
test-fixtures.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
xshell.workspace = true

[dev-dependencies]
borsh.workspace = true
hex.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
solana-streamer.workspace = true
tempfile.workspace = true
